fix inconsistent velocity in collapse animation on inner divs

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ body {
     min-width: 100%;
     min-height: 100%;
     color: var(--color);
-    --collapse-transition-time: 300ms;
 }
 .app[data-theme="light"] {
     --theme-color: gold;
